--- a/painel.html
+++ b/painel.html
@@ -22,7 +22,7 @@
     }
     </style>
     <form method="post" action="painel.php">
-        <select>
+        <select name="internacao" id="internacao">
             <option value="1A">1A - Internação Cardiologia</option>
             <option value="2B">2B - Internação Pediatria</option>
             <option value="3H">3H - Internação Covid</option>
